<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST175_Recipe_t" Id="{4e48d2da-cc5e-43a6-bc3e-2f0f9b670724}">
    <Declaration><![CDATA[TYPE ST175_Recipe_t :
STRUCT
    file_name : STRING;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>